--- a/src/main.scss
+++ b/src/main.scss
@@ -122,6 +122,19 @@ footer {
 }
 
 @media only screen and (max-device-width: 767px) {
+  h1 {
+    font-size: 24px;
+    sub {
+      font-size: 12px;
+    }
+  }
+  h2 {
+    font-size: 20px;
+  }
+  p,
+  footer {
+    font-size: 12px;
+  }
   main {
     flex-direction: column-reverse;
     padding: 32px;
@@ -134,6 +147,14 @@ footer {
       }
     }
   }
+  header {
+    padding-left: 16px;
+    justify-content: center;
+    img {
+      margin-right: 4px;
+      width: 32px;
+    }
+  }
   .downloads {
     display: none;
   }
@@ -142,5 +163,9 @@ footer {
   }
   footer {
     padding: 16px;
+    flex-direction: column;
+    img {
+      padding-bottom: 8px;
+    }
   }
 }
