--- a/src/main.scss
+++ b/src/main.scss
@@ -121,6 +121,10 @@ footer {
   }
 }
 
+.screenshots {
+  width: 550px;
+}
+
 @media only screen and (max-device-width: 767px) {
   h1 {
     font-size: 24px;
@@ -167,5 +171,8 @@ footer {
     img {
       padding-bottom: 8px;
     }
+  }
+  .screenshots {
+    width: 100%;
   }
 }
