--- a/src/main.scss
+++ b/src/main.scss
@@ -120,7 +120,12 @@ footer {
     margin-right: 8px;
   }
 }
-
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait),
+  only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  .downloads {
+    display: none;
+  }
+}
 @media only screen and (max-device-width: 767px) {
   h1 {
     font-size: 24px;
