--- a/src/main.scss
+++ b/src/main.scss
@@ -84,18 +84,23 @@ header {
 
 main {
   display: flex;
-  flex-direction: row;
+
   justify-content: space-between;
-  padding: 64px;
   background-image: url(/images/recPattern.svg);
   background-size: 70%;
   background-repeat: no-repeat;
   background-position: bottom right;
+  @media only screen and (min-width: 1001px) {
+    flex-direction: row;
+    padding: 32px 5vw;
+  }
+  @media only screen and (max-width: 1000px) {
+    flex-direction: column-reverse;
+    padding: 32px 10vw;
+  }
 
-  aside {
-    .downloads {
-      margin-top: 64px;
-    }
+  .downloads {
+    margin: 0 64px;
   }
   .slick-dots li button::before {
     color: white;
@@ -106,7 +111,12 @@ main {
   figure {
     margin: 0;
     img {
-      width: 550px;
+      @media only screen and (min-width: 1001px) {
+        width: 55vw;
+      }
+      @media only screen and (max-width: 1000px) {
+        width: 80vw;
+      }
     }
   }
 }
@@ -125,11 +135,18 @@ footer {
     margin-right: 8px;
   }
 }
-
-.screenshots {
-  //this padding protects the content from the caros. arrows
-  //padding-left: 50px;
-  width: 550px;
+.right-side {
+  text-align: center;
+  .screenshots {
+    padding-bottom: 24px;
+    @media only screen and (min-width: 1001px) {
+      width: 55vw;
+    }
+    @media only screen and (max-width: 1000px) {
+      width: 80vw;
+      padding-bottom: 24px;
+    }
+  }
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait),
@@ -138,7 +155,6 @@ footer {
     display: none;
   }
 }
-
 @media only screen and (max-device-width: 767px) {
   h1 {
     font-size: 24px;
