--- a/src/main.scss
+++ b/src/main.scss
@@ -69,7 +69,16 @@ button {
   font-weight: bold;
   margin-top: 16px;
 }
-
+a {
+  margin: 0 8px;
+  color: #c51010;
+  text-decoration: none;
+  font-weight: bold;
+}
+a:hover {
+  font-style: italic;
+  margin: 0 7.5px;
+}
 header {
   display: flex;
   flex-direction: row;
