--- a/src/main.scss
+++ b/src/main.scss
@@ -12,6 +12,7 @@ body,
 }
 .container {
   min-height: 100%;
+  width: 100vw;
 }
 
 body {
@@ -139,19 +140,24 @@ main {
   width: 100vw;
   margin: 0;
   display: flex;
+
   @media only screen and (min-width: 1001px) {
     width: 90vw;
-    flex-direction: row;
+    flex-direction: row-reverse;
     padding: 32px 5vw;
     justify-content: space-between;
     div {
-      width: 40vw;
+      width: 60vw;
       margin: 0;
+    }
+    .left-ideas {
+      width: 25vw;
     }
   }
   @media only screen and (max-width: 1000px) {
     flex-direction: column;
     padding: 32px 10vw;
+    width: unset;
     div {
       width: 75vw;
       margin: 0;
@@ -160,6 +166,8 @@ main {
 }
 footer {
   display: flex;
+  text-align: center;
+  width: calc(100vw - 64px);
   align-items: center;
   background: $white;
   color: $red;
@@ -168,6 +176,9 @@ footer {
     width: 43px;
     height: 30px;
     margin-right: 8px;
+  }
+  p {
+    margin: 0;
   }
 }
 .right-side {
@@ -178,7 +189,7 @@ footer {
       width: 55vw;
     }
     @media only screen and (max-width: 1000px) {
-      width: 80vw;
+      width: calc(100vw - 64px);
       padding-bottom: 24px;
     }
   }
@@ -231,7 +242,8 @@ footer {
     display: flex;
   }
   footer {
-    padding: 16px;
+    padding: 16px 32px;
+    width: calc(100vw - 64px);
     flex-direction: column;
     img {
       padding-bottom: 8px;
@@ -240,4 +252,6 @@ footer {
   .screenshots {
     width: 100%;
   }
+}
+@media only screen and (min-width: 1600px) {
 }
