--- a/src/main.scss
+++ b/src/main.scss
@@ -183,6 +183,12 @@ footer {
 }
 .right-side {
   text-align: center;
+  .image-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
   .screenshots {
     padding-bottom: 24px;
     @media only screen and (min-width: 1001px) {
